[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos-use = "0.10.5"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
